force-app/main/default/objects/Delivery__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CumulusCI</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>